kubernetes/ubuntu.yml
apiVersion: v1
kind: Pod
metadata:
    name: ubuntu
    namespace: cortijo
spec:
    containers:
    - name: ubuntu
      image: ubuntu
      command: ["/bin/sh"]
      args: ["-c", "while true; do echo hello; sleep 10;done"]
