kubernetes/auth.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-svc-a
  namespace: cortijo
  labels:
    name: auth-svc-a
spec:
  type: LoadBalancer
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: auth-svc-a
  selector:
    app: auth-deployment
---
apiVersion: apps/v1 # Usa apps/v1beta2 para versiones anteriores a 1.9.0
kind: Deployment
metadata:
  name: auth-deployment
  namespace: cortijo
  labels:
    name: auth-rc
spec:
  selector:
    matchLabels:
      app: auth-deployment
  replicas: 1 # indica al controlador que ejecute 2 pods
  template:
    metadata:
      labels:
        app: auth-deployment
    spec:
      containers:
      - name: auth
        image: enriqueramosmunoz/auth:rasp
        command: ["node", "server.js"]
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: config
          mountPath: /root/node/config_url.yaml
          subPath: config.yaml
        imagePullPolicy: Always
      volumes:
      - name: config
        configMap:
          name: url-config
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: auth
  namespace: cortijo
spec:
  rules:
  - host: auth.cortijodemazas.nip.io
    http:
      paths:
      - backend:
          serviceName: auth-svc-a
          servicePort: 3000
        path: /
  tls:
  - hosts:
    - auth.cortijodemazas.nip.io
