kubernetes/front.yml
apiVersion: v1
kind: Service
metadata:
  name: front-svc-a
  namespace: cortijo
  labels:
    name: front-svc-a
spec:
  type: LoadBalancer
  ports:
  - port: 5000
    targetPort: 80
    protocol: TCP
    name: front-svc-a
  selector:
    app: front-deployment
---
apiVersion: apps/v1 # Usa apps/v1beta2 para versiones anteriores a 1.9.0
kind: Deployment
metadata:
  name: front-deployment
  namespace: cortijo
  labels:
    name: front-rc
spec:
  selector:
    matchLabels:
      app: front-deployment
  replicas: 1 # indica al controlador que ejecute 2 pods
  template:
    metadata:
      labels:
        app: front-deployment
    spec:
      containers:
      - name: front
        image: enriqueramosmunoz/front2:rasp
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config
          mountPath: /root/node/config_url.yaml
          subPath: config.yaml
        imagePullPolicy: Always
      volumes:
      - name: config
        configMap:
          name: url-config
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: front
  namespace: cortijo
spec:
  rules:
  - host: www.cortijodemazas.com
    http:
      paths:
      - backend:
          serviceName: front-svc-a
          servicePort: 5000
        path: /
  # tls:
  # - hosts:
  #   - www.cortijodemazas.com
  #   secretName: cortijo-tls
