kubernetes/mongo.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-svc-a
  namespace: cortijo
  labels:
    name: mongo-svc-a
spec:
  type: LoadBalancer
  ports:
  - port: 27017
    targetPort: 27017
    protocol: TCP
    name: mongo-svc-a
  selector:
    name: mongo-node1
    instance: rod
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mongo
  namespace: cortijo
spec:
  rules:
  - host: mongo.cortijodemazas.nip.io
    http:
      paths:
      - backend:
          serviceName: mongo-svc-a
          servicePort: 27017
        path: /
  tls:
  - hosts:
    - mongo.cortijodemazas.nip.io
