kubernetes/socket.yml
apiVersion: v1
kind: Service
metadata:
  name: socket-svc-a
  namespace: cortijo
  labels:
    name: socket-svc-a
spec:
  type: LoadBalancer
  ports:
  - port: 6000
    targetPort: 3000
    protocol: TCP
    name: socket-svc-a
  selector:
    app: socket-deployment
---
apiVersion: apps/v1 # Usa apps/v1beta2 para versiones anteriores a 1.9.0
kind: Deployment
metadata:
  name: socket-deployment
  namespace: cortijo
  labels:
    name: socket-rc
spec:
  selector:
    matchLabels:
      app: socket-deployment
  replicas: 1 # indica al controlador que ejecute 2 pods
  template:
    metadata:
      labels:
        app: socket-deployment
    spec:
      containers:
      - name: socket
        image: enriqueramosmunoz/socket:rasp
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: config
          mountPath: /root/node/config_url.yaml
          subPath: config.yaml
        imagePullPolicy: Always
      volumes:
      - name: config
        configMap:
          name: url-config
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: socket
  namespace: cortijo
spec:
  rules:
  - host: socket.cortijodemazas.com
    http:
      paths:
      - backend:
          serviceName: socket-svc-a
          servicePort: 6000
        path: /
  tls:
  - hosts:
    - socket.cortijodemazas.com
