kubernetes/ws.yml
apiVersion: v1
kind: Service
metadata:
  name: ws-svc-a
  namespace: cortijo
  labels:
    name: ws-svc-a
spec:
  type: LoadBalancer
  ports:
  - port: 7000
    targetPort: 3000
    protocol: TCP
    name: ws-svc-a
  selector:
    app: ws-deployment
---
apiVersion: apps/v1 # Usa apps/v1beta2 para versiones anteriores a 1.9.0
kind: Deployment
metadata:
  name: ws-deployment
  namespace: cortijo
  labels:
    name: ws-rc
spec:
  selector:
    matchLabels:
      app: ws-deployment
  replicas: 1 # indica al controlador que ejecute 2 pods
  template:
    metadata:
      labels:
        app: ws-deployment
    spec:
      containers:
      - name: ws
        image: enriqueramosmunoz/ws:rasp
        ports:
        - containerPort: 3000
        - containerPort: 3001
        volumeMounts:
        - name: config
          mountPath: /root/scr/config_url.yaml
          subPath: config.yaml
        imagePullPolicy: Always
      volumes:
      - name: config
        configMap:
          name: url-config
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ws
  namespace: cortijo
spec:
  rules:
  - host: ws.cortijo.internal
    http:
      paths:
      - backend:
          serviceName: ws-svc-a
          servicePort: 7000
        path: /
  # tls:
  # - hosts:
  #   - ws.cortijo.internal
